<resources>
    <string name="app_name">homework3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="version_hint" />
    <string name="name_hint" />
    <string name="add" />
    <string name="version" />
    <string name="codename" />
    <string name="android9" />
    <string name="pie" />
    <string name="android8" />
    <string name="oreo" />
</resources>